# px4_gz

./: README.md
px4_gz_application/: CMakeLists.txt  package.xml
px4_gz_application/src/: odometry.cc  rviz_mesh_loader.cc  visualization_helper.cc
px4_gz_bringup/: CMakeLists.txt  package.xml
px4_gz_bringup/config/: foxglove.json  launch_px4.sh  px4_gz_bridge.yaml
px4_gz_bringup/launch/: diff_drive.launch.py  px4_gz.launch.py  rrbot_setup.launch.py
px4_gz_description/: CMakeLists.txt  package.xml
px4_gz_description/models/Oak tree/: model.sdf
px4_gz_description/models/Oak tree/meshes/: oak_tree.stl
px4_gz_description/models/Pine tree/: model.sdf
px4_gz_description/models/Pine tree/meshes/: pine_tree.stl
px4_gz_description/models/lidar_3d_v1/: model.sdf
px4_gz_description/models/lidar_3d_v2/: model.sdf
px4_gz_description/models/x500_lidar/: model.config  model.sdf
px4_gz_gazebo/: CMakeLists.txt  package.xml
px4_gz_gazebo/include/px4_gz_gazebo/: BasicSystem.hh  FullSystem.hh
px4_gz_gazebo/src/: BasicSystem.cc  FullSystem.cc
px4_gz_gazebo/worlds/: diff_drive.sdf  px4_gz.sdf  px4_gz.yaml
