<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_gz_application</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the px4_gz example</description>
  <maintainer email="cmw4187@126.com">HopeCollector</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>
  <author>HopeCollector</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>visualization_msgs</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
